--- a/index.html
+++ b/index.html
@@ -194,12 +194,11 @@
                 </div>
                 <p class="about-header">私がエンジニアを目指す理由</p>
                 <div class="about">
-                    <span class="about-bg"></span>
-                    <span class="about-bg"></span>
-                    <span class="about-bg"></span>
                     <div class="about__body-wrapper jsFadeInOutDelay">
+                        <span class="about-bg"></span>
+                        <span class="about-bg"></span>
                         <div class="about__body-wrapper__body-top rellax" data-rellax-speed="1" data-rellax-percentage=".8" id="about1">
-                            <span class="about-title">Ⅰ　ものづくり
+                            <span class="about-title"><span style="color: red">Ⅰ</span>　ものづくり
                             </span>
                             <p class="about-body">
                                 こんちは田代敬太ですこんにちは田代敬太ですこんちは田代敬太ですこんにちは田代敬太ですこんちは田代敬太ですこんにちは田代敬太ですこんちは田代敬太ですこんにちは田代敬太ですこんちは田代敬太ですこんにちは田代敬太ですこんちは田代敬太ですこんにちは田代敬太です
@@ -225,8 +224,10 @@
                         </div>
                     </div>
                     <div class="about__body-wrapper jsFadeInOutDelay">
+                        <span class="about-bg"></span>
+                        <span class="about-bg"></span>
                         <div class="about__body-wrapper__body-top rellax" data-rellax-speed="1" data-rellax-percentage=".8" id="about2">
-                            <p class="about-title">Ⅱ スキルアップ</p>
+                            <p class="about-title"><span style="color: red">Ⅱ</span> スキルアップ</p>
                             <p class="about-body">ローレムイップサムローレムイップサムローレムイップサムローレム
                                 <br>イップサムローレムイップサムローレムイップサムローレム
                                 <br>イップサムローレムイップサムローレムイップサムローレムイップサム
@@ -251,8 +252,10 @@
                         </div>
                     </div>
                     <div class="about__body-wrapper jsFadeInOutDelay">
+                        <span class="about-bg"></span>
+                        <span class="about-bg"></span>
                         <div class="about__body-wrapper__body-top rellax" data-rellax-speed="1" data-rellax-percentage=".8" id="about3">
-                            <p class="about-title">Ⅲ チーム</p>
+                            <p class="about-title"><span style="color: red">Ⅲ</span> チーム</p>
                             <p class="about-body">ローレムイップサムローレムイップサムローレムイップサムローレム
                                 イップサムローレムイップサムローレムイップサムローレム
                                 イップサムローレムイップサムローレムイップサムローレムイップサム
@@ -373,6 +376,26 @@
             <section class="contact-section" id="contact">
                 <div class="h-fade-in">
                     <h2 class="h-fade-in__body">contact</h2>
+                </div>
+                <div class="contact">
+                    <div class="link-wrapper">
+                        <address class="contact__mail">
+                            <span class="link-title">Mail</span>
+                            <a class="fill-link" href="mailto:kt.tokyo2020@gmail.com"></a>
+                        </address>
+                        <div class="contact__wantedly">
+                            <span class="link-title">Wantedly</span>
+                            <a class="fill-link" href="https://www.wantedly.com/users/128136893"　target="_blank　rel="noopener"></a>
+                        </div>
+                        <div class="contact__quita">
+                            <span class="link-title">Quita</span>
+                            <a class="fill-link" href="https://qiita.com/Dendai-man"　target="_blank　rel="noopener"></a>
+                        </div>
+                        <div class="contact__github">
+                            <span class="link-title">Github</span>
+                            <a class="fill-link" href="https://github.com/Dendai-man/my-portfolio"　target="_blank　rel="noopener"></a>
+                        </div>
+                    </div>
                 </div>
             </section>
     <!-- <section class="contact"></section> -->
