--- a/index.html
+++ b/index.html
@@ -49,6 +49,38 @@
                 <span class="nav__menu-icon__line"></span>
             </div>
         </nav>
+        <nav class="nav-bottom">
+            <ul>
+                <li>
+                    <a class="navBottomTop" href="#top">Welcome</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a class="navBottomProfile" href="#profile">Profile</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a class="navBottomAbout" href="#about">About</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a class="navBottomSkills" href="#skills">Skills</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a class="navBottomWorks" href="#works">Works</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a class="navBottomContact" href="#contact">Contact</a>
+                </li>
+            </ul>
+        </nav>
         <!-- Main Sections -->
         <div class="sections-container">
             <div class="bgSectionTitlesWrapper">
@@ -380,19 +412,26 @@
                 <div class="contact">
                     <div class="link-wrapper">
                         <address class="contact__mail">
-                            <span class="link-title">Mail</span>
+                            <span class="link-title-cover"></span>
+                            <span class="link-title"><span style="color: red;">M</span>ail</span>
                             <a class="fill-link" href="mailto:kt.tokyo2020@gmail.com"></a>
                         </address>
                         <div class="contact__wantedly">
-                            <span class="link-title">Wantedly</span>
+                            <img src="/images/wantedly-mark.png" alt="画像">
+                            <span class="link-title-cover"></span>
+                            <span class="link-title"></span>
                             <a class="fill-link" href="https://www.wantedly.com/users/128136893"　target="_blank　rel="noopener"></a>
                         </div>
-                        <div class="contact__quita">
-                            <span class="link-title">Quita</span>
+                        <div class="contact__qiita">
+                            <img src="/images/qiita-mark.png" alt="画像">
+                            <span class="link-title-cover"></span>
+                            <span class="link-title"></span>
                             <a class="fill-link" href="https://qiita.com/Dendai-man"　target="_blank　rel="noopener"></a>
                         </div>
                         <div class="contact__github">
-                            <span class="link-title">Github</span>
+                            <img src="/images/github-mark.png" alt="画像">
+                            <span class="link-title-cover"></span>
+                            <span class="link-title"></span>
                             <a class="fill-link" href="https://github.com/Dendai-man/my-portfolio"　target="_blank　rel="noopener"></a>
                         </div>
                     </div>
