--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
                         ITとものづくりが好きな学生です（でした）。
                         <br>Webエンジニアを目指しています。独学を始めて約3ヶ月が経ちました。
                         <br>エンジニアになりたいという気持ち一つで、当サイトを制作しました。制作期間は1ヶ月です。
-                        <br>ありきたりな物になるのを避ける為リソースをUIに全振りして、オリジナリティを出しました。
-                        <br>意識したポイントは、リッチなデザイン/アニメーション最適化/コードの可能性や保守性/レスポンシブ化です。
+                        <br>ありきたりな物になるのを避ける為リソースをUIに注ぎ、オリジナリティを出しました。
+                        <br>意識したポイントは、UI・UX/軽量化/コードの可能性や保守性/レスポンシブ化です。
                         <br>好きなものは歌・映画・旅行・寿司・うどんです。
                         </div>
                     </div>
@@ -233,11 +233,14 @@
                             <span class="about-title"><span style="color: red">Ⅰ</span>　ものづくり
                             </span>
                             <p class="about-body">
-                                こんちは田代敬太ですこんにちは田代敬太ですこんちは田代敬太ですこんにちは田代敬太ですこんちは田代敬太ですこんにちは田代敬太ですこんちは田代敬太ですこんにちは田代敬太ですこんちは田代敬太ですこんにちは田代敬太ですこんちは田代敬太ですこんにちは田代敬太です
-                                こんちは田代敬太ですこんにちは田代敬太ですこんちは田代敬太ですこんにちは田代敬太ですこんちは田代敬太ですこんにちは田代敬太ですこんちは田代敬太ですこんにちは田代敬太ですこんちは田代敬太ですこんにちは田代敬太ですこんちは田代敬太ですこんにちは田代敬太です
+                                　私は小さい頃からものづくりが大好きです。人生において、何かを創り出している時ほど時間を忘れて熱中する時間はありません。
+                                <br>そのルーツは幼稚園時代まで遡り、昼休憩の時間には一人でブロックを組み立てて先生に見せつける、というのをひたすら繰り返す子供でした。
+                                <br><br>　小学校・中学校時代はレゴやプラモデルにハマり、高校では「リトルビックプラネット」というクリエイト要素が強めのゲームで、論理回路などを使ったロボットを作るなどしました。大学では1000名以上を動員するライブの振り付けや照明など、舞台演出を担当・考案しました。
+                                <br><br>　私は何を創るにも「他の人が思いつかないような、今までにない新しいもの・すごいものを作りたい」という思いを持ち、こだわりを持って取り組んで来ました。
+                                <br><br>　エンジニアになってからも、受け取り側を驚かせるような「こだわりのある新しいものづくり」を大切にしていきたいと思っています。
                             </p>
                         </div>
-                        <div class="about__body-wrapper__body-bottom rellax" data-rellax-speed="-1" data-rellax-percentage="0">
+                        <div class="about__body-wrapper__body-bottom rellax" data-rellax-speed="-3" data-rellax-percentage="0">
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
                                 <img class="about-img" src="/images/bg-front02.JPG" alt="画像">
                             </div>
@@ -260,12 +263,13 @@
                         <span class="about-bg"></span>
                         <div class="about__body-wrapper__body-top rellax" data-rellax-speed="1" data-rellax-percentage=".8" id="about2">
                             <p class="about-title"><span style="color: red">Ⅱ</span> スキルアップ</p>
-                            <p class="about-body">ローレムイップサムローレムイップサムローレムイップサムローレム
-                                <br>イップサムローレムイップサムローレムイップサムローレム
-                                <br>イップサムローレムイップサムローレムイップサムローレムイップサム
+                            <p class="about-body">　私はスキルアップが得意です。私には多くのスキルアップに勤しんできたことによる経験値があります。またその過程では、自律的に自分に適した目標や方法を自ら見極め、実践していくことができます。
+                                <br><br>　私がスキルアップに楽しさを見出したのは中学時代に始めたテニス部での活動でした。入部当初こそ周りに置いてかれるような状態で、センスの無さを発揮していましたが、活動外での練習を続けたことで無事レギュラー入りを果たすことが出来ました。これをきっかけに地道な努力の繰り返しの大切さを学びました。
+                                <br><br>　それ以降も自分磨きを続けました。高校ではテニスを続け、学業にも力を入れました。そのお陰で、定期テストはほぼクラス1位でした。英語の発音を極めたりもしました。大学受験では目標としていたレベルの大学全てに合格し、大学ではサークル活動の一環で、新たに歌を始めました。これは5年が経った今でも続けており、ボイトレ用のメモは15000字に達します。
+                                <br><br>　またこれらのスキルアップを行う過程では、常に自走的で在りました。そのため他人の力に頼らない、自走的なスキルアップを得意とするのが私の強みです。この強みは、エンジニアになってからも活きる強みだと思っています。
                             </p>
                         </div>
-                        <div class="about__body-wrapper__body-bottom rellax" data-rellax-speed="-1" data-rellax-percentage="0">
+                        <div class="about__body-wrapper__body-bottom rellax" data-rellax-speed="-3" data-rellax-percentage="0">
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
                                 <img class="about-img" src="/images/bg-front02.JPG" alt="画像">
                             </div>
@@ -287,13 +291,13 @@
                         <span class="about-bg"></span>
                         <span class="about-bg"></span>
                         <div class="about__body-wrapper__body-top rellax" data-rellax-speed="1" data-rellax-percentage=".8" id="about3">
-                            <p class="about-title"><span style="color: red">Ⅲ</span> チーム</p>
+                            <p class="about-title"><span style="color: red">Ⅲ</span>チーム</p>
                             <p class="about-body">ローレムイップサムローレムイップサムローレムイップサムローレム
                                 イップサムローレムイップサムローレムイップサムローレム
                                 イップサムローレムイップサムローレムイップサムローレムイップサム
                             </p>
                         </div>
-                        <div class="about__body-wrapper__body-bottom rellax" data-rellax-speed="-1" data-rellax-percentage="0">
+                        <div class="about__body-wrapper__body-bottom rellax" data-rellax-speed="-3" data-rellax-percentage="0">
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
                                 <img class="about-img" src="/images/bg-front02.JPG" alt="画像">
                             </div>
@@ -313,7 +317,9 @@
                     </div>
                 </div>
                 <div class="previewImgWrapper no-pointer-events">
-                    <div class="previewImg"></div>
+                    <div class="previewImg">
+                        <span class="previewImgDetail">こんにちはありがとうございます</span>
+                    </div>
                 </div>
                 <div class="aboutCloseTarget no-pointer-events"></div>
             </section>
@@ -322,7 +328,7 @@
                     <h2 class="h-fade-in__body">Skills</h2>
                 </div>
                 <div class="skills">
-                    <div class="skills__skills-wrapper rellax jsFadeIn" data-rellax-speed="3" data-rellax-percentage=".2">
+                    <div class="skills__skills-wrapper rellax jsFadeIn" data-rellax-speed="3" data-rellax-percentage=".5">
                     <div class="skills__skills-wrapper__skill-1 jsFadeInOut">
                         <div class="skill-title">
                         <strong>Back End</strong>
@@ -346,8 +352,10 @@
                         <div class="skill-icon __js"></div>
                         </div>
                         <p class="skill-body">
-                        バックエンドをある程度学んだ後オリジナルアプリケーション作りに取り掛かりました。<br>当初はBootstrapやjQueryで簡易的なデザインを実装しようとしたのですが、満足したものが出来なかったため
-                        HTML/CSS/JSを1から学んでいきました。現在は簡単なものであれば、アニメーションのあるWebページをレスポンシブに作成できます。保守性が高く、直感的に分かりやすいコードを目指しました。
+                        バックエンドをある程度学んだ後は、オリジナルアプリケーション作りに取り掛かりました。
+                        <br>当初はBootstrapやjQueryを使い簡易的なデザインで高機能なアプリを作成しようとしたのですが、デザインに満足出来ず
+                        HTML/CSS/JSを1から学んでいきました。現在は簡単なものであれば、アニメーションのあるWebページをレスポンシブに作成できます。
+                        保守性が高く、直感的に分かりやすいコードを目指しました。(JSはちょっと煩雑ですが。)
                         </p>
                     </div>
                     <div class="skills__skills-wrapper__skill-3 jsFadeInOut">
@@ -357,9 +365,11 @@
                         <div class="skills-icons-wrapper">
                         <div class="skill-icon __next"></div>
                         </div>
-                        <p class="skill-body">バックエンドの学習中心に切り替えていきます。
-                        同時にDockerやGithubやAWSやなど、現段階では？の多い知見を取り入れながら、効率的に技術力を磨いていきたいです。
-                        資格では、TOEIC850点と基本情報技術者取得を目指します。あそいｄじょあいｓｊどあいｊどいあｓだどあいっぁしぉあおいさじょいｄじょいあじゃおいｓｃじょあいｓｊｃおいあｓｃじょいあｊそｃいじゃ
+                        <p class="skill-body">
+                            <br>実務ではおそらくフロントエンド/バックエンドのどちらかしか扱わないと思いますが、目指すはチームの支柱になれるような、フルスタックエンジニアです。
+                            <br>そのためにも、実務で扱わない技術も積極的に学んでいく予定です。
+                            <br>ちなみに現在はフロントエンド（VueJS）を学んでいます。
+                            <br>資格では、TOEIC850点と基本情報技術者取得を目指して勉強しています。
                         </p>
                     </div>
                     </div>
@@ -409,7 +419,8 @@
                 <div class="h-fade-in">
                     <h2 class="h-fade-in__body">contact</h2>
                 </div>
-                <div class="contact">
+                <div class="contact jsFadeInOutDelay">
+                    <div class="contact-bg-char">Thank<br><span style="color: red;">U</span><br>for<br>visiting...</div>
                     <div class="link-wrapper">
                         <address class="contact__mail">
                             <span class="link-title-cover"></span>
