--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
             </li> 
             <li>
                 <a href="#contact">Contact</a>
+            </li>
+            <br><br><br><br><br><br>
+            <li>
+                <a href="https://www.youtube.com/channel/UCe9Co_6y3sG9zZzZvEwXrMA?view_as=subscriber" target="_blank" rel="noopener">Youtube</a>
             </li> 
             </ul>
             <div class="nav__menu-icon">
@@ -237,24 +241,24 @@
                                 <br>そのルーツは幼稚園時代まで遡り、昼休憩の時間には一人でブロックを組み立てて先生に見せつける、というのをひたすら繰り返す子供でした。
                                 <br><br>　小学校・中学校時代はレゴやプラモデルにハマり、高校では「リトルビックプラネット」というクリエイト要素が強めのゲームで、論理回路などを使ったロボットを作るなどしました。大学では1000名以上を動員するライブの振り付けや照明など、舞台演出を担当・考案しました。
                                 <br><br>　私は何を創るにも「他の人が思いつかないような、今までにない新しいもの・すごいものを作りたい」という思いを持ち、こだわりを持って取り組んで来ました。
-                                <br><br>　エンジニアになってからも、受け取り側を驚かせるような「こだわりのある新しいものづくり」を大切にしていきたいと思っています。
+                                <br><br>　エンジニアになってからも、受け取り側を驚かせるような「こだわりのある新しいものづくり」をしていけたらなと思っています。
                             </p>
                         </div>
                         <div class="about__body-wrapper__body-bottom rellax" data-rellax-speed="-3" data-rellax-percentage="0">
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img class="about-img" src="/images/bg-front02.JPG" alt="画像">
+                                <img class="about-img" src="/images/lego.gif" alt="画像">
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img class="about-img" src="/images/bg-front01.JPG" alt="画像">                            
+                                <img class="about-img" src="/images/logic.jpg" alt="画像">                            
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img class="about-img" src="/images/bg-front02.JPG" alt="画像">
+                                <img class="about-img" src="/images/robot.gif" alt="画像">
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img class="about-img" src="/images/bg-front03.JPG" alt="画像">                        
+                                <img class="about-img" src="/images/logic.gif" alt="画像">                        
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img class="about-img" src="/images/bg-front02.JPG" alt="画像">
+                                <img class="about-img" src="/images/teach.gif" alt="画像">
                             </div>
                         </div>
                     </div>
@@ -263,10 +267,10 @@
                         <span class="about-bg"></span>
                         <div class="about__body-wrapper__body-top rellax" data-rellax-speed="1" data-rellax-percentage=".8" id="about2">
                             <p class="about-title"><span style="color: red">Ⅱ</span> スキルアップ</p>
-                            <p class="about-body">　私はスキルアップが得意です。私には多くのスキルアップに勤しんできたことによる経験値があります。またその過程では、自律的に自分に適した目標や方法を自ら見極め、実践していくことができます。
-                                <br><br>　私がスキルアップに楽しさを見出したのは中学時代に始めたテニス部での活動でした。入部当初こそ周りに置いてかれるような状態で、センスの無さを発揮していましたが、活動外での練習を続けたことで無事レギュラー入りを果たすことが出来ました。これをきっかけに地道な努力の繰り返しの大切さを学びました。
-                                <br><br>　それ以降も自分磨きを続けました。高校ではテニスを続け、学業にも力を入れました。そのお陰で、定期テストはほぼクラス1位でした。英語の発音を極めたりもしました。大学受験では目標としていたレベルの大学全てに合格し、大学ではサークル活動の一環で、新たに歌を始めました。これは5年が経った今でも続けており、ボイトレ用のメモは15000字に達します。
-                                <br><br>　またこれらのスキルアップを行う過程では、常に自走的で在りました。そのため他人の力に頼らない、自走的なスキルアップを得意とするのが私の強みです。この強みは、エンジニアになってからも活きる強みだと思っています。
+                            <p class="about-body">　私はスキルアップが得意です。これまで様々なスキルアップに勤しんできたことが、今の自信に繋がっています。またその過程では、自律的に自分に適した目標や方法を自ら見極め、実践していける自信があります。
+                                <br><br>　私がスキルアップに楽しさを見出したのは中学時代に始めたテニス部での活動でした。入部当初こそ周りに置いてかれるような状態で、センスの無さを発揮していましたが、活動外での練習を続けたことで無事レギュラー入りを果たすことが出来ました。これをきっかけに「努力は裏切らないんだな」と実感し努力することが好きになりました。
+                                <br><br>　それ以来スキルアップは日常の一部になりました。高校ではテニスを続け、学業にも力を入れました。そのお陰で定期テストはほぼクラス1位でした。英語の発音を極め、ネイティブレベルになったりもしました。大学受験では目標としていたレベルの大学全てに合格し、大学入学後はサークル活動の一環で、本格的に歌を始めました。これは5年が経った今でも続けており、ボイトレ用のメモは15000字に達します。
+                                <br><br>　そしてこれらのスキルアップを行う過程では、常に自走的で在りました。そのため他人の力に頼らない、自走的なスキルアップを得意とするのが私の強みです。この強みは、エンジニアになってからも活きる強みだと思っています。
                             </p>
                         </div>
                         <div class="about__body-wrapper__body-bottom rellax" data-rellax-speed="-3" data-rellax-percentage="0">
@@ -292,9 +296,10 @@
                         <span class="about-bg"></span>
                         <div class="about__body-wrapper__body-top rellax" data-rellax-speed="1" data-rellax-percentage=".8" id="about3">
                             <p class="about-title"><span style="color: red">Ⅲ</span>チーム</p>
-                            <p class="about-body">ローレムイップサムローレムイップサムローレムイップサムローレム
-                                イップサムローレムイップサムローレムイップサムローレム
-                                イップサムローレムイップサムローレムイップサムローレムイップサム
+                            <p class="about-body">　
+                                私には元々独りよがりな部分がありましたが、大学時代のサークル活動を通じてチーム活動の魅力に気づき
+                                <br>
+                                <br>
                             </p>
                         </div>
                         <div class="about__body-wrapper__body-bottom rellax" data-rellax-speed="-3" data-rellax-percentage="0">
@@ -318,7 +323,9 @@
                 </div>
                 <div class="previewImgWrapper no-pointer-events">
                     <div class="previewImg">
-                        <span class="previewImgDetail">こんにちはありがとうございます</span>
+                        <span class="previewImgPrevBtn"></span>
+                        <span class="previewImgDetail"></span>
+                        <span 3class="previewImgNextBtn"></span>
                     </div>
                 </div>
                 <div class="aboutCloseTarget no-pointer-events"></div>
@@ -431,19 +438,19 @@
                             <img src="/images/wantedly-mark.png" alt="画像">
                             <span class="link-title-cover"></span>
                             <span class="link-title"></span>
-                            <a class="fill-link" href="https://www.wantedly.com/users/128136893"　target="_blank　rel="noopener"></a>
+                            <a class="fill-link" href="https://www.wantedly.com/users/128136893"　target="_blank"　rel="noopener"></a>
                         </div>
                         <div class="contact__qiita">
                             <img src="/images/qiita-mark.png" alt="画像">
                             <span class="link-title-cover"></span>
                             <span class="link-title"></span>
-                            <a class="fill-link" href="https://qiita.com/Dendai-man"　target="_blank　rel="noopener"></a>
+                            <a class="fill-link" href="https://qiita.com/Dendai-man"　target="_blank"　rel="noopener"></a>
                         </div>
                         <div class="contact__github">
                             <img src="/images/github-mark.png" alt="画像">
                             <span class="link-title-cover"></span>
                             <span class="link-title"></span>
-                            <a class="fill-link" href="https://github.com/Dendai-man/my-portfolio"　target="_blank　rel="noopener"></a>
+                            <a class="fill-link" href="https://github.com/Dendai-man/my-portfolio"　target="_blank"　rel="noopener"></a>
                         </div>
                     </div>
                 </div>
