--- a/index.html
+++ b/index.html
@@ -246,19 +246,19 @@
                         </div>
                         <div class="about__body-wrapper__body-bottom rellax" data-rellax-speed="-3" data-rellax-percentage="0">
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img class="about-img" src="/images/lego.gif" alt="画像">
+                                <img class="about-img" src="/images/bg-front01.JPG" alt="画像">
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img class="about-img" src="/images/logic.jpg" alt="画像">                            
+                                <img class="about-img" src="/images/bg-front02.jpg" alt="画像">                            
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img class="about-img" src="/images/robot.gif" alt="画像">
+                                <img class="about-img" src="/images/bg-front03.jpg" alt="画像">
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img class="about-img" src="/images/logic.gif" alt="画像">                        
+                                <img class="about-img" src="/images/bg-front01.JPG" alt="画像">                        
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img class="about-img" src="/images/teach.gif" alt="画像">
+                                <img id="aboutImg1" class="about-img" src="/images/bg-front02.jpg" alt="画像">
                             </div>
                         </div>
                     </div>
