--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         <br>エンジニアになりたいという気持ち一つで、当サイトを制作しました。制作期間は1ヶ月です。
                         <br>ありきたりな物になるのを避ける為リソースをUIに注ぎ、オリジナリティを出しました。
                         <br>意識したポイントは、UI・UX/軽量化/コードの可能性や保守性/レスポンシブ化です。
-                        <br>好きなものは歌・映画・旅行・寿司・うどんです。
+                        <br>好きなものは歌・映画・旅行・寿司。
                         </div>
                     </div>
                 <!-- <span class="jsFadeIn rellax" data-rellax-speed="-5"></span> -->
@@ -237,25 +237,24 @@
                             <span class="about-title"><span style="color: red">Ⅰ</span>　ものづくり
                             </span>
                             <p class="about-body">
-                                　私は小さい頃からものづくりが大好きです。人生において、何かを創り出している時ほど時間を忘れて熱中する時間はありません。
-                                <br>そのルーツは幼稚園時代まで遡り、昼休憩の時間には一人でブロックを組み立てて先生に見せつける、というのをひたすら繰り返す子供でした。
-                                <br><br>　小学校・中学校時代はレゴやプラモデルにハマり、高校では「リトルビックプラネット」というクリエイト要素が強めのゲームで、論理回路などを使ったロボットを作るなどしました。大学では1000名以上を動員するライブの振り付けや照明など、舞台演出を担当・考案しました。
-                                <br><br>　私は何を創るにも「他の人が思いつかないような、今までにない新しいもの・すごいものを作りたい」という思いを持ち、こだわりを持って取り組んで来ました。
-                                <br><br>　エンジニアになってからも、受け取り側を驚かせるような「こだわりのある新しいものづくり」をしていけたらなと思っています。
+                                <br><br>　私は小さい頃からものづくりが大好きです。人生において、何かを創作している時ほど時間を忘れて熱中する時間はありません。
+                                <br><br>　そのルーツは幼稚園時代まで遡ります。当時からものづくりが好きで、昼休みには1人でブロックを組み立てて先生に見せつけるというのをひたすら繰り返すような子供でした。小・中学校時代の趣味はレゴやプラモデルで、高校では「リトルビックプラネット」というクリエイト要素の強いゲームにハマり、論理回路などを使ったロボットを作ったりもしました。大学入学後はサークル活動の一環で、1000名以上を動員するライブの振り付けや照明など舞台演出を考案しました（詳細は後述します）。
+                                <br><br>　これまで大小様々なものづくりをしてきましたが、私は何を創るにも「他の人が思いつかないような、今までにない新しいものを作ろう」という想いを持ち、こだわりを持って取り組む人間です。
+                                <br><br>　エンジニアとしてものづくりに携わることが今の私の夢であり、「こだわりのあるものづくり」を大切にし、沢山の人を喜ばせたいです。
                             </p>
                         </div>
                         <div class="about__body-wrapper__body-bottom rellax" data-rellax-speed="-3" data-rellax-percentage="0">
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img id="aboutImg1" class="about-img" src="/images/bg-front01.JPG" alt="画像">
+                                <img id="aboutImg1" class="about-img" src="/images/lego.jpg" alt="画像">
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img id="aboutImg2" class="about-img" src="/images/bg-front02.jpg" alt="画像">                            
+                                <img id="aboutImg2" class="about-img" src="/images/robot-thumbnail.jpg" alt="画像">                            
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img id="aboutImg3" class="about-img" src="/images/bg-front03.jpg" alt="画像">
+                                <img id="aboutImg3" class="about-img" src="/images/logic-thumbnail.jpg" alt="画像">
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img class="about-img" src="/images/bg-front01.JPG" alt="画像">                        
+                                <img id="aboutImg4" class="about-img" src="/images/logic.jpg" alt="画像">                        
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
                                 <img id="aboutImg5" class="about-img" src="/images/bg-front02.jpg" alt="画像">
@@ -267,10 +266,10 @@
                         <span class="about-bg"></span>
                         <div class="about__body-wrapper__body-top rellax" data-rellax-speed="1" data-rellax-percentage=".8" id="about2">
                             <p class="about-title"><span style="color: red">Ⅱ</span> スキルアップ</p>
-                            <p class="about-body">　私はスキルアップが得意です。これまで様々なスキルアップに勤しんできたことが、今の自信に繋がっています。またその過程では、自律的に自分に適した目標や方法を自ら見極め、実践していける自信があります。
-                                <br><br>　私がスキルアップに楽しさを見出したのは中学時代に始めたテニス部での活動でした。入部当初こそ周りに置いてかれるような状態で、センスの無さを発揮していましたが、活動外での練習を続けたことで無事レギュラー入りを果たすことが出来ました。これをきっかけに「努力は裏切らないんだな」と実感し努力することが好きになりました。
+                            <p class="about-body">　私はスキルアップが得意です。これまで様々なスキルアップに勤しんできたことが、その自信へと繋がっています。またその過程では、自律的に自分に適した目標や方法を自ら見極め、実践していける自信があります。
+                                <br><br>　まず私がスキルアップに楽しさを見出したのは中学時代に始めたテニス部での活動でした。入部当初こそ周りに置いてかれるような状態で、センスの無さを発揮していましたが、活動外での練習を続けたことで無事レギュラー入りを果たすことが出来ました。これをきっかけに努力の大切さ・楽しさを実感し努力することが好きになりました。
                                 <br><br>　それ以来スキルアップは日常の一部になりました。高校ではテニスを続け、学業にも力を入れました。そのお陰で定期テストはほぼクラス1位でした。英語の発音を極め、ネイティブレベルになったりもしました。大学受験では目標としていたレベルの大学全てに合格し、大学入学後はサークル活動の一環で、本格的に歌を始めました。これは5年が経った今でも続けており、ボイトレ用のメモは15000字に達します。
-                                <br><br>　そしてこれらのスキルアップを行う過程では、常に自走的で在りました。そのため他人の力に頼らない、自走的なスキルアップを得意とするのが私の強みです。この強みは、エンジニアになってからも活きる強みだと思っています。
+                                <br><br>　そしてこれらのスキルアップを行う過程では、常に自走的で在りました。自ら目標を立て、自らの力で進み続けてきました。自走的なスキルアップを得意とするのが私の強みです。この強みは、エンジニアになってからも活きる強みだと思っています。
                             </p>
                         </div>
                         <div class="about__body-wrapper__body-bottom rellax" data-rellax-speed="-3" data-rellax-percentage="0">
@@ -296,10 +295,11 @@
                         <span class="about-bg"></span>
                         <div class="about__body-wrapper__body-top rellax" data-rellax-speed="1" data-rellax-percentage=".8" id="about3">
                             <p class="about-title"><span style="color: red">Ⅲ</span>チーム</p>
-                            <p class="about-body">　
-                                私には元々独りよがりな部分がありましたが、大学時代のサークル活動を通じてチーム活動の魅力に気づき
-                                <br>
-                                <br>
+                            <p class="about-body">　3つめは「チーム」です。私は大学時代のサークル活動をきっかけに、
+                                大学入学後、「歌を歌いたい」というシンプルな理由で入ったサークルでは、本格的なチーム活動を経験しました。　をきっかけに「チームで働きたい」と思うようになりました。
+
+                                <br>エンジニアとして働くことが、私の「チームで働きたい」という想いに繋がります。
+                                <br>技術力だけでなく周りとのコミュニケーション力にも長けたエンジニアになりたいと思っています。
                             </p>
                         </div>
                         <div class="about__body-wrapper__body-bottom rellax" data-rellax-speed="-3" data-rellax-percentage="0">
@@ -427,8 +427,8 @@
                     <h2 class="h-fade-in__body">contact</h2>
                 </div>
                 <div class="contact jsFadeInOutDelay">
-                    <div class="contact-bg-char">Thank<br><span style="color: red;">U</span><br>for<br>visiting...</div>
-                    <div class="link-wrapper">
+                    <div class="contact-bg-char">Thank<br><span style="color: red;">U</span>for<br>visiting...</div>
+                    <div class="link-wrapper rellax" data-rellax-speed="4" data-rellax-percentage=".4">
                         <address class="contact__mail">
                             <span class="link-title-cover"></span>
                             <span class="link-title"><span style="color: red;">M</span>ail</span>
@@ -438,19 +438,19 @@
                             <img src="/images/wantedly-mark.png" alt="画像">
                             <span class="link-title-cover"></span>
                             <span class="link-title"></span>
-                            <a class="fill-link" href="https://www.wantedly.com/users/128136893"　target="_blank"　rel="noopener"></a>
+                            <a class="fill-link" href="https://www.wantedly.com/users/128136893" target="_blank" rel="noopener"></a>
                         </div>
                         <div class="contact__qiita">
                             <img src="/images/qiita-mark.png" alt="画像">
                             <span class="link-title-cover"></span>
                             <span class="link-title"></span>
-                            <a class="fill-link" href="https://qiita.com/Dendai-man"　target="_blank"　rel="noopener"></a>
+                            <a class="fill-link" href="https://qiita.com/Dendai-man" target="_blank" rel="noopener"></a>
                         </div>
                         <div class="contact__github">
                             <img src="/images/github-mark.png" alt="画像">
                             <span class="link-title-cover"></span>
                             <span class="link-title"></span>
-                            <a class="fill-link" href="https://github.com/Dendai-man/my-portfolio"　target="_blank"　rel="noopener"></a>
+                            <a class="fill-link" href="https://github.com/Dendai-man/my-portfolio" target="_blank" rel="noopener"></a>
                         </div>
                     </div>
                 </div>
