--- a/index.html
+++ b/index.html
@@ -233,14 +233,14 @@
                     <div class="about__body-wrapper jsFadeInOutDelay">
                         <span class="about-bg"></span>
                         <span class="about-bg"></span>
-                        <div class="about__body-wrapper__body-top rellax" data-rellax-speed="1" data-rellax-percentage=".8" id="about1">
+                        <div class="about__body-wrapper__body-top rellax" data-rellax-speed="1" data-rellax-percentage="1" id="about1">
                             <span class="about-title"><span style="color: red">Ⅰ</span>　ものづくり
                             </span>
                             <p class="about-body">
                                 <br><br>　私は小さい頃からものづくりが大好きです。人生において、何かを創作している時ほど時間を忘れて熱中する時間はありません。
                                 <br><br>　そのルーツは幼稚園時代まで遡ります。当時からものづくりが好きで、昼休みには1人でブロックを組み立てて先生に見せつけるというのをひたすら繰り返すような子供でした。小・中学校時代の趣味はレゴやプラモデルで、高校では「リトルビックプラネット」というクリエイト要素の強いゲームにハマり、論理回路などを使ったロボットを作ったりもしました。大学入学後はサークル活動の一環で、1000名以上を動員するライブの振り付けや照明など舞台演出を考案しました（詳細は後述します）。
                                 <br><br>　これまで大小様々なものづくりをしてきましたが、私は何を創るにも「他の人が思いつかないような、今までにない新しいものを作ろう」という想いを持ち、こだわりを持って取り組む人間です。
-                                <br><br>　エンジニアとしてものづくりに携わることが今の私の夢であり、「こだわりのあるものづくり」を大切にし、沢山の人を喜ばせたいです。
+                                <br><br>　エンジニアとして、大好きなものづくりに携わることが今の私の夢であり、「こだわりのあるものづくり」で沢山の人を喜ばせたいです。
                             </p>
                         </div>
                         <div class="about__body-wrapper__body-bottom rellax" data-rellax-speed="-3" data-rellax-percentage="0">
@@ -254,17 +254,17 @@
                                 <img id="aboutImg3" class="about-img" src="/images/logic-thumbnail.jpg" alt="画像">
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img id="aboutImg4" class="about-img" src="/images/logic.jpg" alt="画像">                        
+                                <img id="aboutImg4" class="about-img" src="/images/jedi.jpg" alt="画像">                        
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img id="aboutImg5" class="about-img" src="/images/bg-front02.jpg" alt="画像">
+                                <img id="aboutImg5" class="about-img" src="/images/live.jpg" alt="画像">
                             </div>
                         </div>
                     </div>
                     <div class="about__body-wrapper jsFadeInOutDelay">
                         <span class="about-bg"></span>
                         <span class="about-bg"></span>
-                        <div class="about__body-wrapper__body-top rellax" data-rellax-speed="1" data-rellax-percentage=".8" id="about2">
+                        <div class="about__body-wrapper__body-top rellax" data-rellax-speed="1" data-rellax-percentage="1" id="about2">
                             <p class="about-title"><span style="color: red">Ⅱ</span> スキルアップ</p>
                             <p class="about-body">　私はスキルアップが得意です。これまで様々なスキルアップに勤しんできたことが、その自信へと繋がっています。またその過程では、自律的に自分に適した目標や方法を自ら見極め、実践していける自信があります。
                                 <br><br>　まず私がスキルアップに楽しさを見出したのは中学時代に始めたテニス部での活動でした。入部当初こそ周りに置いてかれるような状態で、センスの無さを発揮していましたが、活動外での練習を続けたことで無事レギュラー入りを果たすことが出来ました。これをきっかけに努力の大切さ・楽しさを実感し努力することが好きになりました。
@@ -276,17 +276,11 @@
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
                                 <img class="about-img" src="/images/bg-front02.JPG" alt="画像">
                             </div>
+                            <div class="about__body-wrapper__body-bottom__about-video-inner">
+                                <iframe class="about-video" src="https://www.youtube.com/embed/PZ4AegUN99k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            </div>
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
                                 <img class="about-img" src="/images/bg-front01.JPG" alt="画像">                            
-                            </div>
-                            <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img class="about-img" src="/images/bg-front02.JPG" alt="画像">
-                            </div>
-                            <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img class="about-img" src="/images/bg-front03.JPG" alt="画像">                        
-                            </div>
-                            <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img class="about-img" src="/images/bg-front01.JPG" alt="画像">
                             </div>
                         </div>
                     </div>
