--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             <p class="jsFadeInUp">
                                 <br>そんな私が「エンジニア」という道に気がついた時、
                                 埋もれかけていた夢が掘り起こされ、
-                                大きな希望と後悔が全身を駆け巡りました。
+                                大きな希望が全身を駆け巡りました。
                             </p>
                         </div>
                         <div class="my-words-bottom rellax" data-rellax-speed="-1" data-rellax-percentage=".5">
@@ -213,11 +213,12 @@
                         <div class="profile-my-background">青山学院大学 経済学部経済学科 二十年三月卒業　TOEIC795</div>
                         <div class="profile-intro">
                         ITとものづくりが好きな学生です（でした）。
-                        <br>Webエンジニアを目指しています。独学を始めて約3ヶ月が経ちました。
+                        <br>Webエンジニアを目指しています。独学を始めて約4ヶ月が経ちました。
+                        <br>好きなものは歌・映画・旅行・寿司。
                         <br>エンジニアになりたいという気持ち一つで、当サイトを制作しました。制作期間は1ヶ月です。
                         <br>ありきたりな物になるのを避ける為リソースをUIに注ぎ、オリジナリティを出しました。
                         <br>意識したポイントは、UI・UX/軽量化/コードの可能性や保守性/レスポンシブ化です。
-                        <br>好きなものは歌・映画・旅行・寿司。
+                        <br>このサイトを通して、私がどんな人間かを伝えられればと思います。
                         </div>
                     </div>
                 <!-- <span class="jsFadeIn rellax" data-rellax-speed="-5"></span> -->
@@ -236,28 +237,24 @@
                         <div class="about__body-wrapper__body-top rellax" data-rellax-speed="1" data-rellax-percentage="1" id="about1">
                             <span class="about-title"><span style="color: red">Ⅰ</span>　ものづくり
                             </span>
-                            <p class="about-body">
-                                <br><br>　私は小さい頃からものづくりが大好きです。人生において、何かを創作している時ほど時間を忘れて熱中する時間はありません。
-                                <br><br>　そのルーツは幼稚園時代まで遡ります。当時からものづくりが好きで、昼休みには1人でブロックを組み立てて先生に見せつけるというのをひたすら繰り返すような子供でした。小・中学校時代の趣味はレゴやプラモデルで、高校では「リトルビックプラネット」というクリエイト要素の強いゲームにハマり、論理回路などを使ったロボットを作ったりもしました。大学入学後はサークル活動の一環で、1000名以上を動員するライブの振り付けや照明など舞台演出を考案しました（詳細は後述します）。
-                                <br><br>　これまで大小様々なものづくりをしてきましたが、私は何を創るにも「他の人が思いつかないような、今までにない新しいものを作ろう」という想いを持ち、こだわりを持って取り組む人間です。
-                                <br><br>　エンジニアとして、大好きなものづくりに携わることが今の私の夢であり、「こだわりのあるものづくり」で沢山の人を喜ばせたいです。
+                            <p class="about-body">　私は小さい頃からものづくりが大好きです。人生において、何かを創作している時ほど時間を忘れて熱中する時間はありません。
+                                <br><br>　そのルーツは幼稚園時代まで遡ります。当時からものづくりが好きで、昼休みには1人でブロックを組み立てて先生に見せつけるというのをひたすら繰り返すような子供でした。小・中学校時代の趣味はレゴやプラモデルで、高校では「リトルビックプラネット」というクリエイト要素の強いゲームにハマり、論理回路などを使ったロボットを作ったりもしました。大学入学後はサークル活動の一環で、1000名以上を動員するライブの振り付けや照明・MCなど舞台演出を考案しました。
+                                <br><br>　この他にも大小様々なものづくりをしてきましたが、私は何を創るにも「他の人が思いつかないような、今までにない新しいものを作ろう」という想いを持ち、こだわりを持って取り組む人間です。
+                                <br><br>　エンジニアとして、大好きなものづくりに携わることが今の私の夢であり、「こだわりのあるものづくり」で沢山の人を喜ばせられたらと思います。
                             </p>
                         </div>
                         <div class="about__body-wrapper__body-bottom rellax" data-rellax-speed="-3" data-rellax-percentage="0">
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img id="aboutImg1" class="about-img" src="/images/lego.jpg" alt="画像">
+                                <img class="about-img" src="/images/lego.jpg" alt="画像">
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img id="aboutImg2" class="about-img" src="/images/robot-thumbnail.jpg" alt="画像">                            
+                                <img id="aboutImg1" class="about-img" src="/images/robot-thumbnail.jpg" alt="画像">                            
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img id="aboutImg3" class="about-img" src="/images/logic-thumbnail.jpg" alt="画像">
+                                <img id="aboutImg2" class="about-img" src="/images/logic-thumbnail.jpg" alt="画像">
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img id="aboutImg4" class="about-img" src="/images/jedi.jpg" alt="画像">                        
-                            </div>
-                            <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img id="aboutImg5" class="about-img" src="/images/live.jpg" alt="画像">
+                                <img class="about-img" src="/images/jedi.jpg" alt="画像">                        
                             </div>
                         </div>
                     </div>
@@ -266,21 +263,23 @@
                         <span class="about-bg"></span>
                         <div class="about__body-wrapper__body-top rellax" data-rellax-speed="1" data-rellax-percentage="1" id="about2">
                             <p class="about-title"><span style="color: red">Ⅱ</span> スキルアップ</p>
-                            <p class="about-body">　私はスキルアップが得意です。これまで様々なスキルアップに勤しんできたことが、その自信へと繋がっています。またその過程では、自律的に自分に適した目標や方法を自ら見極め、実践していける自信があります。
-                                <br><br>　まず私がスキルアップに楽しさを見出したのは中学時代に始めたテニス部での活動でした。入部当初こそ周りに置いてかれるような状態で、センスの無さを発揮していましたが、活動外での練習を続けたことで無事レギュラー入りを果たすことが出来ました。これをきっかけに努力の大切さ・楽しさを実感し努力することが好きになりました。
-                                <br><br>　それ以来スキルアップは日常の一部になりました。高校ではテニスを続け、学業にも力を入れました。そのお陰で定期テストはほぼクラス1位でした。英語の発音を極め、ネイティブレベルになったりもしました。大学受験では目標としていたレベルの大学全てに合格し、大学入学後はサークル活動の一環で、本格的に歌を始めました。これは5年が経った今でも続けており、ボイトレ用のメモは15000字に達します。
-                                <br><br>　そしてこれらのスキルアップを行う過程では、常に自走的で在りました。自ら目標を立て、自らの力で進み続けてきました。自走的なスキルアップを得意とするのが私の強みです。この強みは、エンジニアになってからも活きる強みだと思っています。
+                            <p class="about-body">　私はスキルアップが好きで、得意です。これまで様々なスキルアップに勤しんできたことが、その自信へと繋がっています。またその過程では、自律的に自分に適した目標や方法を自ら見極め、実践していくことが出来ます。
+                                <br><br>　私のスキルアップのルーツは、中学時代に始めたテニス部での活動でした。入部当初こそそのセンスの無さを発揮し周りに置いてかれるような状態でしたが、活動外での練習を続けたことでレギュラー入りを果たすことが出来ました。これをきっかけに努力の大切さや楽しさを実感し、努力することが好きになりました。
+                                <br><br>　それ以来スキルアップは日常の一部になりました。高校ではテニスを続け、学業にも力を入れました。お陰で定期テストはほぼクラス1位でした。他にも英語の発音を猛特訓したことでネイティブレベルになったりもしました（動画で是非聞いてみてください）。大学受験では目標としていたレベルの大学全てに合格し、大学入学後はサークル活動の一環で、本格的に歌の独学を始めました。これは5年が経った今でも続けており、ボイトレ用のメモは15000字を超えています。
+                                <br><br>　以上のように私は、物心ついた頃から常に何かのスキルアップに勤しんでいます。
+                                <br>またこれらのスキルアップを行う過程では、常に自走的で在りました。自ら目標を立て、自らの力で進み続けてきました。私の強みは、それらの経験を活かした自走的なスキルアップ力です。
+                                <br>そして何よりも、スキルを伸ばすことが好きです。技術職であるエンジニアとして働くことが、私の働きがいに繋がります。
                             </p>
                         </div>
                         <div class="about__body-wrapper__body-bottom rellax" data-rellax-speed="-3" data-rellax-percentage="0">
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img class="about-img" src="/images/bg-front02.JPG" alt="画像">
+                                <img class="about-img" src="/images/test.jpg" alt="画像">
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-video-inner">
                                 <iframe class="about-video" src="https://www.youtube.com/embed/PZ4AegUN99k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img class="about-img" src="/images/bg-front01.JPG" alt="画像">                            
+                                <img id="aboutImg3" class="about-img" src="/images/tennis-thumbnail.jpg" alt="画像">                            
                             </div>
                         </div>
                     </div>
@@ -289,30 +288,29 @@
                         <span class="about-bg"></span>
                         <div class="about__body-wrapper__body-top rellax" data-rellax-speed="1" data-rellax-percentage=".8" id="about3">
                             <p class="about-title"><span style="color: red">Ⅲ</span>チーム</p>
-                            <p class="about-body">　3つめは「チーム」です。私は大学時代のサークル活動をきっかけに、
-                                大学入学後、「歌を歌いたい」というシンプルな理由で入ったサークルでは、本格的なチーム活動を経験しました。　をきっかけに「チームで働きたい」と思うようになりました。
-
-                                <br>エンジニアとして働くことが、私の「チームで働きたい」という想いに繋がります。
-                                <br>技術力だけでなく周りとのコミュニケーション力にも長けたエンジニアになりたいと思っています。
+                            <p class="about-body">　3つめは「チーム」です。大学でのサークル活動を通じてチームで何かに取り組むことに強いやりがいを見出し、「チームで働く」が今後の人生の一つのテーマとなりました。
+                                <br><br>　私が所属していたサークルの主な活動は、歌とダンスを用いた年に2回のライブパフォーマンスです（動画参考）。毎回1000名以上が来場する大きなライブなのですが、その企画から運営までの全てを最高学年のみの少人数（20名ほど）で行っていました。総部員数80名の部を一つの目標に導いていくためにはチームワークが何より求められる環境です。
+                                <br>そこでは一人が複数の役職を担うのは当たり前で、むしろ一人一人が常に役職を越えた目線で動き、チームと連携し合えているかがライブの完成度に大きく影響します。
+                                <br><br>　しかしそれまで大きなチーム活動の経験がなかった私は、上手くチームに貢献できませんでした。舞台演出という自分の仕事で精一杯になり、チーム全体を捉えることが出来なかったのです。
+                                <br><br>　そんな私を支えてくれたのは、他でもないチームメイトでした。私の弱い部分を、必ず誰かが補ってくれました。私もそれに応えるよう自分の強みでチームを支え、互いが互いの弱みを補い合うことでチームは相乗的に成長していきました。時にはぶつかり合うこともあったチームが最終的に団結し生み出したものは、決して一人では生み出せない大きな価値のあるものでした。
+                                <br><br>　私はこの経験を通してチーム活動の素晴らしさを実感しました。だからこそ「一人では生み出せないもの」をチームで生み出していきたいと思うのです。
                             </p>
                         </div>
                         <div class="about__body-wrapper__body-bottom rellax" data-rellax-speed="-3" data-rellax-percentage="0">
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img class="about-img" src="/images/bg-front02.JPG" alt="画像">
+                                <img class="about-img" src="/images/meeting.jpg" alt="画像">
+                            </div>
+                            <div class="about__body-wrapper__body-bottom__about-video-inner">
+                                <iframe class="about-video" src="https://www.youtube.com/embed/INpKFy5d2dM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img class="about-img" src="/images/bg-front01.JPG" alt="画像">                            
-                            </div>
-                            <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img class="about-img" src="/images/bg-front03.JPG" alt="画像">                        
-                            </div>
-                            <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img class="about-img" src="/images/bg-front02.JPG" alt="画像">
-                            </div>
-                            <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img class="about-img" src="/images/bg-front03.JPG" alt="画像">                        
+                                <img class="about-img" src="/images/teach.jpg" alt="画像">                        
                             </div>
                         </div>
+                    </div>
+                    <div class="about__footer jsFadeInUpDelay">
+                        様々な「スキル」を持った人々が「チーム」となり団結し、価値ある「ものづくり」に挑戦する。
+                        <br>エンジニアリングは、私にぴったりの仕事だと確信しています。
                     </div>
                 </div>
                 <div class="previewImgWrapper no-pointer-events">
