--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                                     <!-- <a href=""></a> -->
                                 </div>
                             </div>
-                            <div class="work"></div>
+                            <div class="work __1"></div>
                         </div>
                         <div class="works-container__work-wrapper jsFadeInUpDelay">
                             <div class="workMore __black">
@@ -399,7 +399,7 @@
                                     <!-- <a href=""></a> -->
                                 </div>
                             </div>
-                            <div class="work"></div>
+                            <div class="work __2"></div>
                         </div>
                         <div class="works-container__work-wrapper jsFadeInUpDelay">
                             <div class="workMore __white">
@@ -409,7 +409,7 @@
                                     <!-- <a href="">リンク</a> -->
                                 </div>
                             </div>
-                            <div class="work"></div>
+                            <div class="work __3"></div>
                         </div>
                     </div>
                 </div>
