--- a/index.html
+++ b/index.html
@@ -366,8 +366,8 @@
                         </div>
                         <p class="skill-body">
                             <br>実務ではおそらくフロントエンド/バックエンドのどちらかしか扱わないと思いますが、目指すはチームの支柱になれるような、フルスタックエンジニアです。
-                            <br>そのためにも、実務で扱わない技術も積極的に学んでいく予定です。
-                            <br>ちなみに現在はフロントエンド（VueJS）を学んでいます。
+                            <br>そのためにも、実務で扱わない技術は積極的に学んでいく予定です。
+                            <br>現在はサーバーサイドの学習に切り替え、Webpackやgithub actionによる自動デプロイの導入など、環境にもこだわりながらRailsアプリケーションを作成しています。
                             <br>資格では、TOEIC850点と基本情報技術者取得を目指して勉強しています。
                         </p>
                     </div>
