--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             <p class="jsFadeInUp">
                                 <br>そんな私が「エンジニア」という道に気がついた時、
                                 埋もれかけていた夢が掘り起こされ、
-                                大きな希望が全身を駆け巡りました。
+                                大きな希望と後悔が全身を駆け巡りました。
                             </p>
                         </div>
                         <div class="my-words-bottom rellax" data-rellax-speed="-1" data-rellax-percentage=".5">
