--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>K.Tashiro | 田代敬太のポートフォリオサイト</title>
 
-    <link rel="icon" href="/images/icon.jpg">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
-    <link rel="stylesheet" type="text/css" href="/styles/reset.css">
-    <link rel="stylesheet" type="text/css" href="/styles/loader.css">
-    <link rel="stylesheet" type="text/css" href="/styles/style.css">
+    <link rel="icon" href="../images/icon.jpg">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.3.2/swiper-bundle.min.css">
+    <link rel="stylesheet" type="text/css" href="./styles/reset.css">
+    <link rel="stylesheet" type="text/css" href="./styles/loader.css">
+    <link rel="stylesheet" type="text/css" href="./styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Krona+One|Ubuntu&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Sawarabi+Gothic" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Krona+One&display=swap" rel="stylesheet">
@@ -104,7 +104,7 @@
                     </div>
                     <div class="main-visual__arrow-inner rellax" data-rellax-speed="-4">
                         <a href="#profile">
-                            <img class="main-visual__arrow-inner__arrow" src="/images/down-arrow.png" alt="画像">
+                            <img class="main-visual__arrow-inner__arrow" src="./images/down-arrow.png" alt="画像">
                         </a>
                     </div>
                 </div>
@@ -245,16 +245,16 @@
                         </div>
                         <div class="about__body-wrapper__body-bottom rellax" data-rellax-speed="-3" data-rellax-percentage="0">
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img class="about-img" src="/images/lego.jpg" alt="画像">
+                                <img class="about-img" src="./images/lego.jpg" alt="画像">
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img id="aboutImg1" class="about-img" src="/images/robot-thumbnail.jpg" alt="画像">                            
+                                <img id="aboutImg1" class="about-img" src="./images/robot-thumbnail.jpg" alt="画像">                            
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img id="aboutImg2" class="about-img" src="/images/logic-thumbnail.jpg" alt="画像">
+                                <img id="aboutImg2" class="about-img" src="./images/logic-thumbnail.jpg" alt="画像">
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img class="about-img" src="/images/jedi.jpg" alt="画像">                        
+                                <img class="about-img" src="./images/jedi.jpg" alt="画像">                        
                             </div>
                         </div>
                     </div>
@@ -273,13 +273,13 @@
                         </div>
                         <div class="about__body-wrapper__body-bottom rellax" data-rellax-speed="-3" data-rellax-percentage="0">
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img class="about-img" src="/images/test.jpg" alt="画像">
+                                <img class="about-img" src="./images/test.jpg" alt="画像">
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-video-inner">
                                 <iframe class="about-video" src="https://www.youtube.com/embed/PZ4AegUN99k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img id="aboutImg3" class="about-img" src="/images/tennis-thumbnail.jpg" alt="画像">                            
+                                <img id="aboutImg3" class="about-img" src="./images/tennis-thumbnail.jpg" alt="画像">                            
                             </div>
                         </div>
                     </div>
@@ -298,13 +298,13 @@
                         </div>
                         <div class="about__body-wrapper__body-bottom rellax" data-rellax-speed="-3" data-rellax-percentage="0">
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img class="about-img" src="/images/meeting.jpg" alt="画像">
+                                <img class="about-img" src="./images/meeting.jpg" alt="画像">
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-video-inner">
                                 <iframe class="about-video" src="https://www.youtube.com/embed/INpKFy5d2dM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                             <div class="about__body-wrapper__body-bottom__about-img-inner">
-                                <img class="about-img" src="/images/teach.jpg" alt="画像">                        
+                                <img class="about-img" src="./images/teach.jpg" alt="画像">                        
                             </div>
                         </div>
                     </div>
@@ -427,19 +427,19 @@
                             <a class="fill-link" href="mailto:kt.tokyo2020@gmail.com"></a>
                         </address>
                         <div class="contact__wantedly">
-                            <img src="/images/wantedly-mark.png" alt="画像">
+                            <img src="./images/wantedly-mark.png" alt="画像">
                             <span class="link-title-cover"></span>
                             <span class="link-title"></span>
                             <a class="fill-link" href="https://www.wantedly.com/users/128136893" target="_blank" rel="noopener"></a>
                         </div>
                         <div class="contact__qiita">
-                            <img src="/images/qiita-mark.png" alt="画像">
+                            <img src="./images/qiita-mark.png" alt="画像">
                             <span class="link-title-cover"></span>
                             <span class="link-title"></span>
                             <a class="fill-link" href="https://qiita.com/Dendai-man" target="_blank" rel="noopener"></a>
                         </div>
                         <div class="contact__github">
-                            <img src="/images/github-mark.png" alt="画像">
+                            <img src="./images/github-mark.png" alt="画像">
                             <span class="link-title-cover"></span>
                             <span class="link-title"></span>
                             <a class="fill-link" href="https://github.com/Dendai-man/my-portfolio" target="_blank" rel="noopener"></a>
@@ -452,17 +452,17 @@
             <footer><p>© 2020 K.Tashiro.</p></footer>
         </div>    
     </div>
-        <script type="text/javascript" src="/js/venders/pace.min.js"></script>
-        <script type="text/javascript" src="/js/venders/rellax.min.js"></script>
+        <script type="text/javascript" src="./js/venders/pace.min.js"></script>
+        <script type="text/javascript" src="./js/venders/rellax.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/TextPlugin.min.js"></script>
-        <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
-        <script type="text/javascript" src="/js/libs/tweenmax.js"></script>
-        <script type="text/javascript" src="/js/libs/scrollmagic.js"></script>
-        <script type="text/javascript" src="/js/libs/swiper.js"></script>
-        <script type="text/javascript" src="/js/main.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.3.2/swiper-bundle.min.js"></script>
+        <script type="text/javascript" src="./js/libs/tweenmax.js"></script>
+        <script type="text/javascript" src="./js/libs/scrollmagic.js"></script>
+        <script type="text/javascript" src="./js/libs/swiper.js"></script>
+        <script type="text/javascript" src="./js/main.js"></script>
     </body>
 </html>
